# substrate_template

./: README.md
basechain/: Cargo.toml  README.md
basechain/runtime/src/: lib.rs
basechain/runtime/wasm/src/: lib.rs
basechain/src/: main.rs  service.rs
contract/erc20/: Cargo.toml  lib.rs
contract/erc20/.ink/abi_gen/: Cargo.toml
frontend/: package.json
frontend/src/: index.html  index.tsx
frontend/src/app/: App.tsx  routes.ts
frontend/src/app/components/BaseLayout/: BaseLayout.tsx
frontend/src/app/components/Header/: Header.tsx
frontend/src/app/pages/: index.ts
frontend/src/app/pages/Top/: TopPage.tsx
frontend/src/components/: index.ts
frontend/src/components/RowsLayout/: RowsLayout.tsx
frontend/src/components/icons/: Back.tsx  index.ts
frontend/src/core/: Root.tsx
substrate-erc20/runtime/: Cargo.toml
substrate-erc20/runtime/wasm/: Cargo.toml  build.sh
substrate-erc20/src/: chain_spec.rs
