[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-erc20-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-erc20-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-erc20-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
